--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "^1.5.1"
 dask = {extras = ["diagnostics"], version = "^2022.10.2"}
 interface-meta = "^1.3.0"
 pyarrow = "^10.0.0"
+hypothesis = "^6.56.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
